# Poireaut

./: .env.example  .gitignore  Poireaut.bat  README.md  check_deps.py  demo_avatar_correlation.py  demo_email_cascade.py  demo_graph.py  docker-compose.yml  poireaut.py  pyproject.toml  railway.json
apps/api/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  railway.json  requirements.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_merge_types.py
apps/api/src/: config.py  deps.py  main.py
apps/api/src/db/: __init__.py  base.py  session.py  types.py
apps/api/src/models/: __init__.py  connector.py  datapoint.py  entity.py  investigation.py  user.py
apps/api/src/routes/: auth.py  connectors.py  datapoints.py  entities.py  health.py  identity.py  investigations.py  pivot.py  websocket.py
apps/api/src/schemas/: __init__.py  auth.py  datapoint.py  entity.py  investigation.py
apps/api/src/services/: __init__.py  auth.py  celery_producer.py
apps/api/tests/: test_auth.py  test_health.py
apps/web/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  railway.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/web/src/: App.tsx  api.ts  index.css  router.tsx
apps/web/src/features/: Navbar.tsx
apps/worker/: .dockerignore  Dockerfile  railway.json  requirements.txt
apps/worker/src/: celery_app.py  tasks.py
apps/worker/src/connectors/: __init__.py  _verify.py  base.py  crtsh.py  hibp.py  holehe.py  maigret.py  profile_scraper.py  registry.py  reverse_image.py  wayback.py
docs/: ARCHITECTURE.md
src/osint_core/: __init__.py  cli.py
src/osint_core/app/: __init__.py  api.py  main.py
src/osint_core/app/ui/: app.js  index.html  styles.css
src/osint_core/bus/: __init__.py  dispatcher.py  events.py
src/osint_core/collectors/: __init__.py  base.py
src/osint_core/collectors/domain/: __init__.py  lookup.py  subdomain_extractor.py
src/osint_core/collectors/email/: __init__.py  disposable_domains.py  (+4 more)
src/osint_core/entities/: __init__.py  base.py  graph.py  identifiers.py  profiles.py
src/osint_core/storage/: __init__.py  memory.py
src/osint_core/visualization/: __init__.py  graph_export.py  html_renderer.py  template.html
tests/: test_app_api.py  test_avatar_hash.py  test_bus.py  test_email_collectors.py  test_enrichment.py  test_entities.py  test_extractors.py  test_french_company.py  test_github_commits.py  test_hackernews.py  test_keybase.py  test_pgp_key.py  test_storage.py  test_store_events.py  test_subdomain_extractor.py  test_urlscan.py  test_visualization.py  test_wayback.py  test_whatsmyname.py
tests/fixtures/: alice_two_uids.asc  bob_single_uid.asc
(+30 files in other folders)
